<resources>
    <string name="app_name">Playlist maker</string>
    <string name="search" translatable="false">Поиск</string>
    <string name="media_library" translatable="false">Медиатека</string>
    <string name="settings" translatable="false">Настройки</string>
    <string name="dark_theme" translatable="false">Тёмная тема</string>
    <string name="share_the_app" translatable="false">Поделиться приложением</string>
    <string name="write_to_support" translatable="false">Написать в поддержку</string>
    <string name="user_agreement" translatable="false">Пользовательское соглашение</string>
    <string name="button_back" translatable="false">Кнопка возврата</string>
    <string name="toolbar_image_desc" translatable="false">back</string>
    <string name="link_android_developer_plus" translatable="false">https://practicum.yandex.ru/android-developer-plus/</string>
    <string name="no_mail_applications" translatable="false">Почтовые приложения не найдены</string>
    <string name="select_email_application" translatable="false">Выберите почтовое приложение</string>
    <string name="link_practicum_offer" translatable="false">https://yandex.ru/legal/practicum_offer/</string>
    <string name="text_mail" translatable="false">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="theme_mail" translatable="false">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="email" translatable="false">saschelckin@yandex.ru</string>
    <string name="enter_request" translatable="false">Введите запрос</string>
    <string name="search_label" translatable="false">надпись поиск</string>
    <string name="view_arrow" translatable="false">view arrow</string>
    <string name="logo" translatable="false">logo</string>
    <string name="no_internet" translatable="false">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="no_track" translatable="false">Ничего не нашлось</string>
    <string name="You_were_looking" translatable="false">Вы искали</string>
    <string name="clear_history" translatable="false">Очистить историю</string>
    <string name="track_name" translatable="false">Название трека</string>
    <string name="executor" translatable="false">Исполнитель</string>
    <string name="time" translatable="false">00:00</string>
    <string name="Country" translatable="false">Страна</string>
    <string name="Track_Time" translatable="false">Длительность</string>
    <string name="Album" translatable="false">Альбом</string>
    <string name="Year" translatable="false">Год</string>
    <string name="Genre" translatable="false">Жанр</string>
    <string name="update" translatable="false">Обновить</string>
    <string name="library_empty" translatable="false">Ваша медиатека пуста</string>
    <string name="image_no_tracks" translatable="false">image no tracks</string>
    <string name="new_playlists" translatable="false">Новый плейлист</string>
    <string name="library" translatable="false">Медиатека</string>
    <string name="you_havent_created_any_playlists" translatable="false">Вы не создали\n ни одного плейлиста</string>
    <string name="favorite_tracks" translatable="false">Избранные треки</string>
    <string name="playlists" translatable="false">Плейлисты</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="new_playlist" translatable="false">Новый плейлист</string>
    <string name="description" translatable="false">Описание</string>
    <string name="create" translatable="false">Создать</string>
    <string name="title" translatable="false">Название</string>
    <string name="tracks_count" translatable="false">Количество треков</string>
    <string name="add_to_playlist" translatable="false">Добавить в плейлист</string>
    <string name="playlist" translatable="false">Плейлист</string>
    <string name="icon" translatable="false">icon</string>
    <string name="finish_creating_a_playlist" translatable="false">Завершить создание плейлиста?</string>
    <string name="all_unsaved_data_will_be_lost" translatable="false">Все несохраненные данные будут потеряны</string>
    <string name="cancellation">Отмена</string>
    <string name="complete">Завершить</string>
    <string name="delete_track">Хотите удалить трек?</string>
    <string name="no">Нет</string>
    <string name="yes">Да</string>
    <string name="no_tracks_in_playlist_share">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="share">Поделиться</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="edit_Information">Редактировать информацию</string>
    <string name="do_you_want_to_delete_a_playlist">Хотите удалить плейлист?</string>
    <string name="save">Сохранить</string>
    <string name="edit">Редактировать</string>
    <string name="there_are_no_tracks_in_this_playlist">В этом плейлисте нет треков.</string>
    <string name="clear">Очистить</string>
</resources>