<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/settings_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/textView_settings"
            android:text="@string/settings"
            style="@style/style_toolBar_textView">

        </TextView>

    </LinearLayout>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_theme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/settings_padding_20"
        android:paddingStart="@dimen/_16dp"
        android:paddingEnd="6dp"
        android:text="@string/dark_theme"
        android:textSize="@dimen/_16sp"
        android:fontFamily="@font/ys_display_regular"
        app:thumbTint="@color/switch_thumb_color"
        app:trackTint="@color/switch_track_color"
        android:minWidth="@dimen/_8dp"
        android:maxWidth="300dp">

    </androidx.appcompat.widget.SwitchCompat>


    <TextView
        android:id="@+id/textView_share_the_app"
        style="@style/style_textView_activity_settings"
        android:text="@string/share_the_app"
        app:drawableEndCompat="@drawable/to_share">

    </TextView>

    <TextView
        android:id="@+id/textView_write_to_support"
        style="@style/style_textView_activity_settings"
        android:text="@string/write_to_support"
        app:drawableEndCompat="@drawable/support">

    </TextView>

    <TextView
        android:id="@+id/textView_user_agreement"
        style="@style/style_textView_activity_settings"
        android:text="@string/user_agreement"
        app:drawableEndCompat="@drawable/arrow">

    </TextView>

</androidx.appcompat.widget.LinearLayoutCompat>