<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:theme="@style/Base.Theme.PlaylistMaker.WhiteAndBlack">

    <ImageButton
        android:id="@+id/track_view_logo"
        style="@style/style_track_view_logo"
        android:background="@drawable/rounded_background_2dp"
        android:contentDescription="@string/logo"
        android:layout_marginVertical="@dimen/_8dp" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_marginHorizontal="@dimen/_8dp"
        android:paddingVertical="@dimen/_14dp"
        android:paddingHorizontal="@dimen/_8dp">

        <TextView
            android:id="@+id/trackName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:ellipsize="end"
            android:text="@string/track_name"
            style="@style/style_activity_search_textView_16sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/artistName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:ellipsize="end"
                android:text="@string/executor"
                android:maxWidth="150dp"
                style="@style/style_activity_search_textView_12sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/point"
                android:layout_marginHorizontal="5dp" />

            <TextView
                android:id="@+id/trackTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="@string/time"
                android:ellipsize="end"
                android:minWidth="40dp"
                style="@style/style_activity_search_textView_12sp" />

        </LinearLayout>

    </LinearLayout>

    <ImageButton
        android:id="@+id/track_view_arrow"
        style="@style/style_track_view_arrow"
        android:contentDescription="@string/view_arrow" />

</androidx.appcompat.widget.LinearLayoutCompat>