<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3772E7"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView_app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="16dp"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="16dp"
        android:gravity="start"
        android:text="@string/app_name"
        android:textAppearance="@style/title"
        android:textColor="#ffffff"
        android:textSize="22sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="16dp">


        <Button
            android:id="@+id/button_search"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/search"
            android:textColor="@color/black"
            android:textSize="22sp"
            app:cornerRadius="@dimen/radius_16dp"
            app:icon="@drawable/magnifier"
            app:iconGravity="textStart"
            app:iconTint="@color/black" />

        <Button
            android:id="@+id/button_library"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginVertical="8dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/media_library"
            android:textColor="@color/black"
            android:textSize="22sp"
            app:cornerRadius="@dimen/radius_16dp"
            app:icon="@drawable/media_library"
            app:iconGravity="textStart"
            app:iconTint="@color/black" />

        <Button
            android:id="@+id/button_settings"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/settings"
            android:textColor="@color/black"
            android:textSize="22sp"
            app:cornerRadius="@dimen/radius_16dp"
            app:icon="@drawable/settings"
            app:iconGravity="textStart"
            app:iconTint="@color/black" />

    </LinearLayout>


</LinearLayout>
