<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivitySearch"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <ImageButton
            android:id="@+id/activity_search_button_back"
            style="@style/style_toolBar_button_back"
            android:contentDescription="@string/button_back">
        </ImageButton>

        <TextView
            android:id="@+id/activity_search_textView_search"
            android:text="@string/search"
            style="@style/style_toolBar_textView"
            android:contentDescription="@string/search_label">

        </TextView>

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/rounded_background"
        android:layout_marginHorizontal="@dimen/_16dp"
        android:layout_marginVertical="@dimen/_8dp"
        >

        <EditText
            android:id="@+id/activity_search_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/search"
            android:backgroundTint="@android:color/transparent"
            android:cursorVisible="true"
            android:drawableStart="@drawable/magnifier"
            android:drawablePadding="4dp"
            android:hint="@string/search"
            android:inputType="text"
            android:maxLines="1"
            android:paddingHorizontal="14dp"
            android:paddingVertical="@dimen/_8dp"
            android:textColor="@color/black"
            android:textColorHint="@color/activitySearch.grayBlack"
            android:textCursorDrawable="@color/blue"
            tools:ignore="TouchTargetSizeCheck">

        </EditText>

        <ImageView
            android:id="@+id/activity_search_clearIcon"
            android:layout_gravity="end|center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/search"
            android:paddingVertical="@dimen/_12dp"
            android:paddingHorizontal="@dimen/_14dp"
            android:src="@drawable/clear"
            android:background="@drawable/rounded_background"
            android:backgroundTint="@color/activitySearch.backgroundGrayWhite"
            android:visibility="gone" />


    </FrameLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/activity_search_recyclerView"
        android:layout_marginTop="@dimen/_16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </androidx.recyclerview.widget.RecyclerView>

</androidx.appcompat.widget.LinearLayoutCompat>